--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"dependencies": {
 		"axios": "^0.21.1",
 		"parcel-bundler": "^1.12.5",
-		"rxjs": "^6.6.7"
+		"rxjs": "^6.6.7",
+		"uuid": "^8.3.2"
 	},
 	"scripts": {
 		"dev": "parcel index.html",
