--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"axios": "^0.21.1",
+		"dompurify": "^2.2.7",
 		"parcel-bundler": "^1.12.5",
 		"rxjs": "^6.6.7",
 		"uuid": "^8.3.2"
